--- a/client/html/index.html
+++ b/client/html/index.html
@@ -54,6 +54,9 @@
                         <a href="register">Register</a>
                     </li>
                     <li>
+                        <a href="login">Login</a>
+                    </li>
+                    <li>
                         <a href="post">All posts</a>
                     </li>
                 </ul>
