--- a/client/html/register.html
+++ b/client/html/register.html
@@ -9,7 +9,7 @@
       <div class="row">
         <div class="panel panel-primary">
           <div class="panel-body">
-            <form method="POST" action="register" role="form">
+            <form method="POST" role="form">
               <div class="form-group">
                 <h2>Create account</h2>
               </div>
