--- a/client/html/login.html
+++ b/client/html/login.html
@@ -10,13 +10,13 @@
         <div class="col-md-offset-5 col-md-3">
           <div class="form-login">
             <h4>Welcome back.</h4>
-            <input type="text" id="userName" class="form-control input-sm chat-input" placeholder="username"/>
+            <input type="text" ng-model="user.username" class="form-control input-sm chat-input" placeholder="username"/>
           </br>
-          <input type="text" id="userPassword" class="form-control input-sm chat-input" placeholder="password"/>
+          <input type="text" ng-model="user.password" class="form-control input-sm chat-input" placeholder="password"/>
         </br>
         <div class="wrapper">
           <span class="group-btn">
-            <a id="login-btn" href="#" class="btn btn-primary btn-md">login
+            <a ng-click="login()" href="#" class="btn btn-primary btn-md">login
               <i class="fa fa-sign-in"></i>
             </a>
           </span>
@@ -26,9 +26,8 @@
   </div>
 </div>
 <script src="jquery.min.js"></script>
-<script src="loginController.js"></script>
 <script src="toastr.js"></script>
-<link rel="stylesheet" href="bootstrap.css" media="screen" charset="utf-8">
+<link rel="stylesheet" href="bootstrap.min.css" media="screen" charset="utf-8">
 <link rel="stylesheet" href="login.css" media="screen" charset="utf-8">
 <link rel="stylesheet" href="toastr.min.css" media="screen" charset="utf-8">
 </body>
